--- a/README
+++ b/README
@@ -12,5 +12,5 @@ There is also an script included:
 
 	anybrowser http://anyurl
 
-Comments to: slaven.rezic@berlin.de
+Comments to: slaven@rezic.de
 
